--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css": "node-sass wp-includes/scss/ test-file.css  --output-style compressed -o wp-includes/css/"
+    "css": "node-sass wp-includes/scss/ test-file.css  --output-style compressed -o wp-includes/css/ --importer node_modules/node-sass-json-importer/dist/cli.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ecalvi/wp-test#readme",
   "dependencies": {
     "lib-test": "git+https://git@github.com/ecalvi/lib-test.git",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "node-sass-json-importer": "^4.1.0"
   }
 }
